@@ -3,6 +3,7 @@ Changelog for getTables.
 - Адаптация под modx3(3.0.1) и pdoTools3.
 - Навигация по таблице с CTRL и стрелочками.
 - Инструкции autosave.refresh.row и autosave.refresh.form.
+- select autocomplect не требует field_content.
 
 1.11.3-alpha
 - Добавлено событие getTablesLoadGTSConfig для изменения gts-конфига, когда нельзя редактировать исходник.
